# omp_sparse

./: .gitignore  LICENSE  Makefile  README.md  meson.build  pyproject.toml
omp_sparse/: __init__.py  benchmark.py  utils.py
src/fortran/: omp_sparse.f90
tests/: test_installation.py  test_omp_sparse.py
